--- a/styles/reset.css
+++ b/styles/reset.css
@@ -28,7 +28,7 @@
     }
 
     article,aside,details,figcaption,figure,
-    footer,header,hgroup,menu,nav,section { 
+    footer,header,hgroup,menu,nav,section,footer_widget{ 
         display:block;
     }
 
@@ -96,4 +96,8 @@
 
     input, select {
         vertical-align:middle;
+    }
+
+    *, *:before, *:after {
+        box-sizing: inherit;
     }
