--- a/styles/main.css
+++ b/styles/main.css
@@ -4,38 +4,32 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 body{
-    margin:0;
+    display: block;
+    width:100%;
+    height:100%;
+    margin:0px auto;
+    text-align:center;
+    max-width: 100rem;
 }
 
+/* ----nav bar------ */
 .transparent_nav{
     position: fixed;
     overflow: hidden;    
     width: 100%;
-    /* left: 0; */
     top: 0;
-    background-color: rgba(95, 158, 160, 0.7) ;
+    background-color: rgba(255, 255, 255, 0.7) ;
 }
 
+.transparent_nav > a{
+    float: left;
+    margin-left: 20%;
+}
 .nav_bar{
-    /* display: inline-block; */
-    width: 100%;
-    max-width: 936px;
     padding: 0.5rem 0;
     margin: 0 auto;
-    align-items: center;
-}
-
-.logo {
-    font-family: 'Raleway', sans-serif;
-    padding: 1rem;
-    background: darkslategrey;
-    color: aliceblue;
-}
-
-
-#nav_list{
-    display: inline-block;
-    margin-left: 50%;
+    float: right;
+    margin-right: 20%;
 }
 
 #nav_list li{
@@ -45,10 +39,16 @@ body{
 
 #nav_list li a{
     padding-bottom: 0.2rem;
-    color: white;
+    color: black;
     transition: all 0.4s;
+    text-decoration: none;
 }
 
+#nav_list li a:hover{
+    color: darkred;
+}
+
+/* ----end nav-bar---- */
 
 a{
     text-decoration: none;
@@ -58,9 +58,11 @@ a{
     height: 500px;
     width: 100%;
 }
+
+/* -------start CTA------- */
 .cta{
     position: absolute;
-    top: 425px;
+    top: 430px;
     background-color: rgba(255, 255, 255, 0.8);
     width: 100%;
     padding: 10px 0 10px 0;
@@ -68,7 +70,10 @@ a{
     flex-flow: row wrap;
     justify-content: space-between;
     justify-content: space-around;
-    /* flex-wrap: wrap; */
+}
+
+.cta:hover{
+    background-color: rgba(190, 54, 54, 0.7);
 }
 
 .cta #cta_text{
@@ -76,23 +81,23 @@ a{
      margin-left: 10px;
     
 }
-.cta a{
+
+.cta #cta_link{
     display: inline-block;
     color: white;
     align-self: center;
     padding: 10px;
-}
-
-.btn{
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
     background-color: turquoise;
 }
+
+/* -------end CTA------- */
+
+/* -----start Services----- */
 
 .services .wrapper{
     width: 100%;
     overflow: auto;
-   
-
 }
 .services{
     margin-bottom: 100px;
@@ -101,11 +106,11 @@ a{
     text-align: center;
     padding: 50px 0 30px 0;
 }
-.services .horizontal{
- align-self: center;
- margin-left: 25%;
- margin-right: 25%;
- margin-bottom: 20px;
+
+.services > img{
+ width: 40%;
+ margin-right: 30%;
+ margin-left: 30%;
 }
 .services ul{
     display: flex;
@@ -113,7 +118,6 @@ a{
     flex-flow: row wrap;
     align-content: space-between;
     justify-content: center;
-  /* align-items: center; */
 }
 .services ul li{
     width: 250px;
@@ -124,29 +128,39 @@ a{
 .services ul li i{
     font-size: 45px;
 }
+
+/* -----end Services----- */
+
 ul{
     list-style: none;
 }
 
+/*----- start recent_work---------- */
+
 .recent_work{
-    /* overflow: auto; */
     width: 100%;
-    /* display: flex;
-   
-    justify-content: center; */
-    margin-bottom: 50px;
+    /* max-width:500px; */
+    margin: 0;
     display: flex;
-    justify-content: space-between;
     flex-flow: row wrap;
 }
 .recent_work img{
-    width: 260px;
-    height: 300px;
+    width: 20%;
+    height: 250px;
+
 }
+
+.recent_work img:hover{
+    transform: scale(1.5);
+}
+
+/*----- end recent_work---------- */
+
+/*----- start testimonials---------- */
 
 .testimonials{
     overflow: auto;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     background-color:#80808029;
 }
 .testimonials ul{
@@ -154,8 +168,7 @@ ul{
     align-items: center;
     flex-flow: row wrap;
     align-content: space-between;
-    /* justify-content: center; */
-    justify-content: space-evenly;
+    justify-content: center;
 }
 .testimonials .heading{
     text-align: center;
@@ -164,7 +177,7 @@ ul{
 .testimonials .card {
     max-width: 300px;
     margin: auto;
-    text-align: justify;
+    text-align: center;
     font-family: arial;
   }
   
@@ -172,42 +185,89 @@ ul{
     color: grey;
     font-size: 18px;
 }
+/*----- start testimonials---------- */
+
+/* --------start footer-------- */
+
+footer .footer_widget { grid-area: item0; }
+footer .item1 { grid-area: item1; }
+footer .item2 { grid-area: item2; }
+footer .item3 { grid-area: item3; }
+footer .item4 { grid-area: item4; }
+footer .rights { grid-area: item5; }
 
 footer{
-    background-color: black;
+    /* background-color: black;
     padding: 90px 0 5px 0;
-    position: relative;
+    position: relative; */
+    display: grid;
+    grid-template-areas:
+      'item0 item0 item0 item0 item0 item0'
+      'item1 item1 item2 item3 item4 item4'
+      'item5 item5 item5 item5 item5 item5';
+    grid-gap: 10px;
+    background-color: black;
+    /* padding: 10px; */
 }
 
-footer_widget{
- display: flex;
- flex-flow: row wrap;
- justify-content: space-evenly;
+.footer_widget{
+    margin-left: 20%;
+    margin-right: 20%;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 50rem;
+    padding: 10px 0 10px 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    justify-content: space-around;
 }
 
-footer_widget div{
-    width: 200px;
+.footer_widget #cta_text{
+    display: inline-block;
+    margin-left: 10px; 
+}
+
+.footer_widget #cta_link{
+   display: inline-block;
+   color: white;
+   align-self: center;
+   padding: 10px;
+   background-color: turquoise;
+}
+
+.footer_widget:hover{
+    background-color: brown;
+}
+
+footer .column{
+    width: 25%;
     height: auto;
-    /* text-align: center; */
     justify-content: center;
     color: white;
     text-align: justify;
 
 }
 
-footer_widget div a{
+footer div a{
     color: white;
     text-align: justify;
 }
 
-footer_widget div h3{
+footer div h3{
     margin-bottom: 50px;
+    color: white;
 }
-footer_widget div li{
+
+footer .item4,.item1 p{
+    color: white;
+}
+
+footer div li{
     padding: 0 0 8px 0;
 }
-footer_widget div span{
+footer div span{
     margin: 0 0 8px 0;
+    /* color: white; */
 }
 footer .rights{
     color: white;
@@ -218,14 +278,4 @@ ul{
     padding: 0;
 }
 
-.widget{
-    position: absolute;
-    top: 0px;
-    background-color: rgba(255, 255, 255, 0.7);
-    width: 100%;
-    padding: 10px 0 10px 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    justify-content: space-around; 
-}
+/* --------end footer-------- */
