--- a/styles/main.css
+++ b/styles/main.css
@@ -189,24 +189,35 @@ ul{
 
 /* --------start footer-------- */
 
-footer .item1 { grid-area: item1; }
-footer .item2 { grid-area: item2; }
-footer .item3 { grid-area: item3; }
-footer .item4 { grid-area: item4; }
-footer .rights { grid-area: item5; }
+/* .footer_widget .item1 { grid-area: item1;width: 20%; }
+.footer_widget .item2 { grid-area: item2;width: 20%; }
+.footer_widget .item3 { grid-area: item3;width: 20%;}
+.footer_widget .item4 { grid-area: item4;width: 20%; } */
 
 footer{
-    /* background-color: black;
-    padding: 90px 0 5px 0;
-    position: relative; */
-    display: grid;
-    grid-template-areas:
-      'item1 item1 item2 item3 item4 item4'
-      'item5 item5 item5 item5 item5 item5';
-    grid-gap: 10px;
     background-color: black;
-    /* padding: 10px; */
 }
+
+footer .footer_widget{
+    display: grid;
+    /* grid-template-areas:
+      ' item1 item2 item3 item4 '; */
+    grid-template-columns: 20% 20% 20% 20%;
+    justify-content: center;
+    grid-gap: 10px;
+    padding: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.grid-item {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    /* border: 1px solid rgba(0, 0, 0, 0.8); */
+    /* padding: 20px; */
+    /* font-size: 30px; */
+    text-align: center;
+  }
+
 /* 
 .footer_widget{
     margin-left: 20%;
@@ -237,14 +248,6 @@ footer{
     background-color: brown;
 } */
 
-footer .column{
-    width: 25%;
-    height: auto;
-    justify-content: center;
-    color: white;
-    text-align: justify;
-
-}
 
 footer div a{
     color: white;
@@ -260,7 +263,7 @@ footer div h3{
     color: white;
 }
 
-footer .item4,.item1 p{
+.grid-item p{
     color: white;
 }
 
@@ -274,6 +277,8 @@ footer div span{
 footer .rights{
     color: white;
     text-align: center;
+    padding: 20px;
+    margin: 0;
 }
 
 ul{
